--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
-.icon {
-  width: 64px;
-  vertical-align: top;
-  border: 1px solid salmon;
+#drawingCanvas {
+  border: 1px solid black;
+  border-radius: 8px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+  display: block;
+  margin: 1em auto;
 }
